--- a/README
+++ b/README
@@ -5,7 +5,8 @@ internet and running it as root. Don't blame me if it eats your system.
 ./edit-search-domains.rb
 	A ruby script for Mac OSX that you can run to add or remove search domains
 	from your path. (Must be run as root). You can check your search domains
-	just by running scutil --dns
+	just by running scutil --dns. Works when you're on a wireless or wired
+	network, or on a Juniper VPN. 
 
 	
 
